<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WonkaInc App</string>
    <string name="action.cancel">Cancel</string>
    <string name="label_profession">Profession</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="label_filter">Filter</string>
    <string name="label_apply_filter">Apply</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="title_toolbar_employees">List of Employees</string>
    <string name="profession_subtitle_option">profession</string>
    <string name="gender_subtitle_option">Gender</string>
    <string name="unknow_error_message">An unknown error occurred. Please try again later.</string>
    <string name="server_error_message">Server error occurred. Please try again later.</string>
    <string name="resource_error_message">Resource not found.</string>
    <string name="unauthorized_error">Unauthorized: Please login to access this resource.</string>
    <string name="network_error">Network error occurred. Please check your internet connection and try again.</string>
    <string name="label_favorite_title">Favorite</string>
    <string name="favorite_chocolat">Chocolat</string>
    <string name="favorite_cocoa_nuts">Cocoa nuts</string>
    <string name="label_no_result">Sorry, no results</string>
    <string name="color_blue">Blue</string>
    <string name="color_red">Red</string>

    <string-array name="gender_array">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="profession_array">
        <item>Select</item>
        <item>Gemcutter</item>
        <item>Metalworker</item>
        <item>Developer</item>
        <item>Medic</item>
        <item>Brewer</item>
    </string-array>
</resources>
