<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/tv_title_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/emilys_candy_regular"
        android:text="@string/label_filter"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/view_linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/view_linear"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightGreyScale"
        app:layout_constraintBottom_toTopOf="@id/tv_gender_title_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_filter" />

    <TextView
        android:id="@+id/tv_gender_title_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/emilys_candy_regular"
        android:text="@string/gender_subtitle_option"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sp_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_linear" />

    <Spinner
        android:id="@+id/sp_gender"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginVertical="12dp"
        android:fontFamily="@font/emilys_candy_regular"
        android:popupBackground="@drawable/spinner_dropdown_background"
        app:layout_constraintBottom_toTopOf="@+id/tv_profession_title_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender_title_dialog" />

    <TextView
        android:id="@+id/tv_profession_title_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/emilys_candy_regular"
        android:text="@string/profession_subtitle_option"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sp_profession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_gender" />

    <Spinner
        android:id="@+id/sp_profession"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:popupBackground="@drawable/spinner_dropdown_background"
        app:layout_constraintBottom_toTopOf="@+id/bt_apply_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profession_title_dialog" />

    <Button
        android:id="@+id/bt_apply_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/label_apply_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_profession" />

    <TextView
        android:id="@+id/tv_clear_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/clear_filter"
        android:textColor="@color/purpleAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_apply_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_apply_filter" />

</androidx.constraintlayout.widget.ConstraintLayout>
