<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_counters_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/first_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        android:id="@+id/tv_country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textAlignment="center"
        android:textColor="@color/purpleAccent"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/tv_country"
        app:layout_constraintEnd_toEndOf="@id/first_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_country"/>

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/country"
        android:textAlignment="center"
        android:textColor="@color/purpleAccent"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/first_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_country_title"/>

    <ImageView
        android:id="@+id/iv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_country"
        app:layout_constraintBottom_toTopOf="@+id/tv_country_title"
        app:layout_constraintEnd_toEndOf="@id/first_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_profession_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_profession"
        android:textAlignment="center"
        android:textColor="@color/purpleAccent"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/tv_profession"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/first_guideline"
        app:layout_constraintTop_toBottomOf="@+id/iv_profession" />

    <TextView
        android:id="@+id/tv_profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/label_profession"
        android:textAlignment="center"
        android:textColor="@color/purpleAccent"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/first_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_profession_title" />

    <ImageView
        android:id="@+id/iv_profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_profession"
        app:layout_constraintBottom_toTopOf="@id/tv_profession_title"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/first_guideline"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_age_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textAlignment="center"
        android:textColor="@color/purpleAccent"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/tv_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/end_guideline"
        app:layout_constraintTop_toBottomOf="@+id/iv_age"/>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/age"
        android:textAlignment="center"
        android:textColor="@color/purpleAccent"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/end_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_age_title"/>

    <ImageView
        android:id="@+id/iv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_age"
        app:layout_constraintBottom_toTopOf="@+id/tv_age_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/end_guideline"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
